2차 커밋 1. 로그인/로그아웃 기능 구현 (http session 반영을 통해 로그인 유지 및 유저 정보 불러오기 가능) -------------------- 1차 커밋 1. 회원 가입 2. OTT 모임 개설 (수정)

--- a/ott_project/src/main/resources/templates/loginhome.html
+++ b/ott_project/src/main/resources/templates/loginhome.html
@@ -6,10 +6,10 @@
     <h1>OTT 모집 서비스</h1>
     <p>회원 기능</p>
     <p>
-      <a href="/members/new">회원 가입</a>
-      <!--<a href="/members">회원 목록</a>-->
-      <!--<a href="/ott/new">OTT 모집 신청</a>-->
-      <a href="/login">로그인</a>
+      <!--<a href="/members/new">회원 가입</a>-->
+      <a href="/members">회원 목록</a>
+      <a href="/ott/new">OTT 모집 신청</a>
+      <a href="/logout">로그아웃</a>
     </p>
   </div>
 </div>
