--- a/ott_project/src/main/resources/templates/ott/createOttForm.html
+++ b/ott_project/src/main/resources/templates/ott/createOttForm.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 <div class="container">
-  <form action="/members/new" method="post">
+  <form action="/ott/new" method="post">
     <div class="form-group">
       OTT 개설 신청
       <br>
