--- a/ott_project/src/main/resources/templates/loginhome.html
+++ b/ott_project/src/main/resources/templates/loginhome.html
@@ -8,7 +8,8 @@
     <p>
       <!--<a href="/members/new">회원 가입</a>-->
       <a href="/members">회원 목록</a>
-      <a href="/ott/new">OTT 모집 신청</a>
+      <a href="/ott/new">OTT 모집 개설</a>
+      <a href="/ott/ottinfo">OTT 모집 지원</a>
       <a href="/logout">로그아웃</a>
     </p>
   </div>
