4차 커밋 1. 모집 지원 취소 API 작성 완료 2. 모집 개설 취소 API 작성 완료 3. OTT 모집 지원 페이지 구현 중    - 현재 모집 중인 (개설된) pot 표시 -------------------- 3차 커밋 1. 변수명 가독성있게 재설정 2. OTT 모집 지원 기능 구현 중 -------------------- 2차 커밋 1. 로그인/로그아웃 기능 구현 (http session 반영을 통해 로그인 유지 및 유저 정보 불러오기 가능) -------------------- 1차 커밋 1. 회원 가입 2. OTT 모임 개설 (수정)

--- a/ott_project/src/main/resources/templates/ott/ottinfo.html
+++ b/ott_project/src/main/resources/templates/ott/ottinfo.html
@@ -24,6 +24,7 @@
     </tr>
     </thead>
     <tbody>
+    <!--+${ottinfo.ottIdKey}-->
     <tr th:each="ottinfo : ${ottinfos}">
       <td th:text="${ottinfo.ottVar}"></td>
       <td th:text="${ottinfo.owner}"></td>
@@ -31,10 +32,9 @@
       <td th:text="${ottinfo.nowNum}"></td>
       <td th:text="${ottinfo.duration}"></td>
       <td th:text="${ottinfo.totalCost}"></td>
-      <!--<td><a href="/" th:href="@{'delete/'+${ottinfo.ottIdKey}}">삭제</a></td>-->
+      <td><a href="/" th:href="@{'/ott/ottinfo/del/'+${ottinfo.ottIdKey}}">삭제</a></td>-->
     </tr>
     </tbody>
-
   </table>
 </div>
 </body>
