--- a/ott_project/src/main/resources/templates/ott/ottinfo.html
+++ b/ott_project/src/main/resources/templates/ott/ottinfo.html
@@ -32,7 +32,7 @@
       <td th:text="${ottinfo.owner}"></td>
       <td th:text="${ottinfo.maxNum}"></td>
       <td th:text="${ottinfo.nowNum}"></td>
-      <td th:text="${ottinfo.duration}"></td>
+      <td th:text="${ottinfo.duration} 개월"></td>
       <td th:text="${ottinfo.totalCost}"></td>
       <td><a href="/" th:data-ott-id-key="${ottinfo.ottIdKey}" class="del-link">삭제</a></td>
       <td><a href="/" th:data-add-id-key="${ottinfo.ottIdKey}" class="add-link">신청</a></td>
