--- a/ott_project/src/main/resources/templates/loginhome.html
+++ b/ott_project/src/main/resources/templates/loginhome.html
@@ -7,7 +7,7 @@
     <p>회원 기능</p>
     <p>
       <!--<a href="/members/new">회원 가입</a>-->
-      <a href="/members">회원 목록</a>
+      <!--<a href="/members">회원 목록</a>-->
       <a href="/ott/new">OTT 모집 개설</a>
       <a href="/ott/ottinfo">OTT 모집 지원</a>
       <a href="/members/myinfo"> 내 OTT 신청정보</a>
