8차 커밋 1. 회원 탈퇴 기능 구현 2. 모집 지원 취소 API 기능 개선 -------------------- 7차 커밋 1. 인터셉터 구현 (로그인 안하면 타 페이지 이동 불가) -------------------- 6차 커밋 1. 로그인 세션 구현 완료 2. 로그인 세션 통한 마이 페이지(내 정보) 구현 완료 3. Interceptor 구현 중 -------------------- 5차 커밋 1. 모집 지원/개설/취소 페이지 구현 완료 2. 마이 페이지(내 정보) 구현 완료 3. 로그인 세션, 쿠키 구현 중 -------------------- 4차 커밋 1. 모집 지원 취소 API 작성 완료 2. 모집 개설 취소 API 작성 완료 3. OTT 모집 지원 페이지 구현 중    - 현재 모집 중인 (개설된) pot 표시 -------------------- 3차 커밋 1. 변수명 가독성있게 재설정 2. OTT 모집 지원 기능 구현 중 -------------------- 2차 커밋 1. 로그인/로그아웃 기능 구현 (http session 반영을 통해 로그인 유지 및 유저 정보 불러오기 가능) -------------------- 1차 커밋 1. 회원 가입 2. OTT 모임 개설 (수정)

--- a/ott_project/src/main/resources/templates/loginhome.html
+++ b/ott_project/src/main/resources/templates/loginhome.html
@@ -12,6 +12,7 @@
       <a href="/ott/ottinfo">OTT 모집 지원</a>
       <a href="/members/myinfo"> 내 OTT 신청정보</a>
       <a href="/logout">로그아웃</a>
+      <a href="/members/quitcheck">회원탈퇴</a>
     </p>
   </div>
 </div>
