--- a/ott_project/src/main/resources/templates/members/createMemberForm.html
+++ b/ott_project/src/main/resources/templates/members/createMemberForm.html
@@ -13,7 +13,7 @@
       <label>ID &nbsp &nbsp </label>
       <input type="text" name="userid" placeholder="ID를 입력하세요">
       <br>
-      <label>계좌번호 &nbsp </label>
+      <label>비밀번호 &nbsp </label>
       <input type="text" name="userpw" placeholder="비밀번호를 입력하세요">
       <br>
       <label>전화번호 &nbsp </label>
