10차 커밋 1. 웹페이지 CSS 적용 2. 예외처리 기능 강화 -------------------- 9차 커밋 1. 예외처리 기능 및 페이지 구현 2. 로그인 기능 수정 -------------------- 8차 커밋 1. 회원 탈퇴 기능 구현 2. 모집 지원 취소 API 기능 개선 3. 미사용 API 삭제 -------------------- 7차 커밋 1. 인터셉터 구현 (로그인 안하면 타 페이지 이동 불가) -------------------- 6차 커밋 1. 로그인 세션 구현 완료 2. 로그인 세션 통한 마이 페이지(내 정보) 구현 완료 3. Interceptor 구현 중 -------------------- 5차 커밋 1. 모집 지원/개설/취소 페이지 구현 완료 2. 마이 페이지(내 정보) 구현 완료 3. 로그인 세션, 쿠키 구현 중 -------------------- 4차 커밋 1. 모집 지원 취소 API 작성 완료 2. 모집 개설 취소 API 작성 완료 3. OTT 모집 지원 페이지 구현 중    - 현재 모집 중인 (개설된) pot 표시 -------------------- 3차 커밋 1. 변수명 가독성있게 재설정 2. OTT 모집 지원 기능 구현 중 -------------------- 2차 커밋 1. 로그인/로그아웃 기능 구현 (http session 반영을 통해 로그인 유지 및 유저 정보 불러오기 가능) -------------------- 1차 커밋 1. 회원 가입 2. OTT 모임 개설 (수정)

--- a/ott_project/src/main/resources/templates/error.html
+++ b/ott_project/src/main/resources/templates/error.html
@@ -2,17 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>404 Error - Page Not Found</title>
+    <style>
+    body {
+      background-color: #3617CE;
+      font-family: Arial, sans-serif;
+      color: #fff;
+      text-align: center;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    h1 {
+      font-size: 3rem;
+      margin: 0;
+      padding: 0;
+    }
+
+    p {
+      font-size: 1.2rem;
+      margin: 10px 0;
+    }
+
+    a {
+      color: #FF404E;
+      text-decoration: none;
+      border-bottom: 2px solid #FF404E;
+      transition: all 0.3s ease-in-out;
+    }
+
+    a:hover {
+      color: #fff;
+      background-color: #FF404E;
+    }
+  </style>
 </head>
 <body>
 <div class="container">
-    <div>
-        <h1>ERROR</h1>
-        <p>잘못된 접근 입니다.</p>
-        <p>
-            <a href="/">홈 화면으로 되돌아가기</a>
-        </p>
-    </div>
+    <br>
+    <h1>404 Error - Page Not Found</h1>
+    <p>잘못된 접근입니다.</p>
+    <p>
+        <a href="/">홈 화면으로 되돌아가기</a>
+    </p>
 </div>
 </body>
 </html>
