--- a/ott_project/src/main/resources/templates/login/loginForm.html
+++ b/ott_project/src/main/resources/templates/login/loginForm.html
@@ -1,17 +1,72 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="../css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{/styles/cssandjs/main.css}" rel="stylesheet" />
     <style>
+        body {
+            background-color: #3617CE;
+            color: white;
+        }
         .container {
-            max-width: 560px;
+            margin: 0 auto;
+            max-width: 500px;
+            padding: 20px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
         }
-        .field-error {
-            border-color: #dc3545;
-            color: #dc3545;
+        h2 {
+            font-size: 32px;
+            font-weight: bold;
+            color: #3617CE;
+            margin-bottom: 10px;
         }
+        p {
+           color: #FF404E;
+        }
+        label {
+            color: #3617CE;
+            font-weight: bold;
+            font-size: 18px;
+        }
+        input[type="text"] {
+            background-color: #EFEEEF;
+            color: #000000;
+            border-color: #FFFFFF;
+            width: 190px;
+            border-radius: 5px;
+        }
+        input[type="password"] {
+            background-color: #EFEEEF;
+            color: #000000;
+            border-color: #FFFFFF;
+            width: 190px;
+            border-radius: 5px;
+            margin-bottom: 10px;
+        }
+
+        button[type="submit"] {
+            color: white;
+            background-color: #3617CE;
+            border: none;
+            padding: 5px 5px;
+            border-radius: 5px;
+            text-decoration: none;
+            margin-right: 5px;
+        }
+        button[type="button"] {
+            color: white;
+            background-color: #3617CE;
+            border: none;
+            padding: 5px 5px;
+            border-radius: 5px;
+            text-decoration: none;
+            margin-right: 10px;
+        }
+        button:hover {
+          background-color: #FF404E;
+      }
     </style>
 </head>
 <body>
@@ -29,7 +84,7 @@
         </div>
 
         <div>
-            <label for="loginId">로그인 ID</label>
+            <label for="loginId">로그인ID</label>
             <input type="text" id="loginId" th:field="*{loginId}" class="form-control"
                    th:errorclass="field-error">
             <div class="field-error" th:errors="*{loginId}" />
@@ -40,22 +95,16 @@
                    th:errorclass="field-error">
             <div class="field-error" th:errors="*{password}" />
         </div>
-
-        <hr class="my-4">
-
-        <div class="row">
+        <div class="form-group">
             <div class="col">
-                <button class="w-100 btn btn-primary btn-lg" type="submit">로그인</button>
-            </div>
-            <div class="col">
+                <button type="submit">로그인</button>
+                &nbsp
                 <button class="w-100 btn btn-secondary btn-lg" onclick="location.href='items.html'"
                         th:onclick="|location.href='@{/}'|"
                         type="button">취소</button>
             </div>
         </div>
-
     </form>
-
 </div> <!-- /container -->
 </body>
 </html>
