--- a/ott_project/src/main/resources/templates/loginhome.html
+++ b/ott_project/src/main/resources/templates/loginhome.html
@@ -1,20 +1,63 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<body>
-<div class="container">
-  <div>
-    <h1>OTT 모집 서비스</h1>
-    <p>회원 기능</p>
-    <p>
-      <!--<a href="/members/new">회원 가입</a>-->
-      <!--<a href="/members">회원 목록</a>-->
-      <a href="/ott/new">OTT 모집 개설</a>
-      <a href="/ott/ottinfo">OTT 모집 지원</a>
-      <a href="/members/myinfo"> 내 OTT 신청정보</a>
-      <a href="/logout">로그아웃</a>
-      <a href="/members/quitcheck">회원탈퇴</a>
-    </p>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+  <title>Title</title>
+  <link th:href="@{/styles/cssandjs/main.css}" rel="stylesheet" />
+  <style>
+      body {
+        background-color: #3617CE;
+        color: white;
+      }
+      .container {
+          margin: 0 auto;
+          max-width: 800px;
+          padding: 20px;
+          background-color: white;
+          border-radius: 10px;
+          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+      }
+      h1 {
+          font-size: 32px;
+          font-weight: bold;
+          color: #3617CE;
+          margin-bottom: 10px;
+      }
+      p {
+          color: #FF404E;
+          font-weight: bold
+          font-size: 20px;
+          margin-bottom: 25px;
+      }
+      p {
+          font-size: 18px;
+          margin-bottom: 20px;
+      }
+      a {
+          color: white;
+          background-color: #3617CE;
+          padding: 10px 20px;
+          border-radius: 5px;
+          text-decoration: none;
+          margin-right: 10px;
+      }
+      a:hover {
+          background-color: #FF404E;
+      }
+  </style>
+  <body>
+  <div class="container">
+    <div>
+      <h1>OTT 모집 서비스</h1>
+      <p>회원 기능</p>
+      <p>
+        <!--<a href="/members/new">회원 가입</a>-->
+        <!--<a href="/members">회원 목록</a>-->
+        <a href="/ott/new">OTT 모집 개설</a>
+        <a href="/ott/ottinfo">OTT 모집 지원</a>
+        <a href="/members/myinfo"> 내 OTT 신청정보</a>
+        <a href="/logout">로그아웃</a>
+        <a href="/members/quitcheck">회원탈퇴</a>
+      </p>
+    </div>
   </div>
-</div>
-</body>
+  </body>
 </html>
