--- a/ott_project/src/main/resources/templates/members/quitcheck.html
+++ b/ott_project/src/main/resources/templates/members/quitcheck.html
@@ -1,8 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link th:href="@{/styles/cssandjs/main.css}" rel="stylesheet" />
+
+    <style>
+        body {
+            background-color: #3617CE;
+            color: white;
+        }
+        .container {
+            margin: 0 auto;
+            max-width: 550px;
+            padding: 20px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+        }
+        h1 {
+            font-size: 32px;
+            font-weight: bold;
+            color: #3617CE;
+            margin-bottom: 10px;
+        }
+        p {
+            color: #FF404E;
+            font-weight: bold
+            font-size: 20px;
+            margin-bottom: 25px;
+        }
+        p {
+            font-size: 17px;
+            margin-bottom: 20px;
+        }
+        a {
+            color: white;
+            background-color: #3617CE;
+            padding: 10px 20px;
+            border-radius: 5px;
+            text-decoration: none;
+            margin-right: 10px;
+        }
+        a:hover {
+            background-color: #FF404E;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
