--- a/ott_project/src/main/resources/templates/ott/ottinfo.html
+++ b/ott_project/src/main/resources/templates/ott/ottinfo.html
@@ -1,68 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-  <meta charset="UTF-8">
-  <title>OTT 신청 페이지</title>
-  <link href="../static/css/index.css" th:href="@{/css/index.css}" rel="stylesheet" />
-</head>
-<body>
-<h1>OTT 신청 페이지</h1>
-<a href="/ott/new">OTT 개설은 이쪽으로</a><br>
-<a href="/">홈 화면</a><br>
-<hr>
-<div class="container">
-  <table width="100%" border="1">
-    <thead>
-    <tr>
-      <th>OTT명</th>
-      <th>소유주</th>
-      <th>최대인원</th>
-      <th>현재인원</th>
-      <th>희망공유기간 (개월)</th>
-      <th>총금액</th>
-      <th>삭제</th>
-      <th>신청</th>
-    </tr>
-    </thead>
-    <tbody>
-    <!--+${ottinfo.ottIdKey}-->
-    <tr th:each="ottinfo : ${ottinfos}">
-      <td th:text="${ottinfo.ottVar}"></td>
-      <td th:text="${ottinfo.owner}"></td>
-      <td th:text="${ottinfo.maxNum}"></td>
-      <td th:text="${ottinfo.nowNum}"></td>
-      <td th:text="${ottinfo.duration} + 개월"></td>
-      <td th:text="${ottinfo.totalCost}"></td>
-      <td><a href="/" th:data-ott-id-key="${ottinfo.ottIdKey}" class="del-link">삭제</a></td>
-      <td><a href="/" th:data-add-id-key="${ottinfo.ottIdKey}" class="add-link">신청</a></td>
-      <!--<td><a href="/" th:href="@{'/ott/ottinfo/'+${#strings.toString(ottinfo.ottIdKey)}}">삭제</a></td>-->
-    </tr>
-    </tbody>
-  </table>
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script type="text/javascript">
-  $(document).ready(function() {
-    $('.del-link').click(function(event) {
-      event.preventDefault();
-      console.log(event);
-      var ottIdKey = $(this).data('ott-id-key');
-      var form = $('<form action="/ott/ottinfo/' + ottIdKey + '" method="get"></form>');
-      $('body').append(form);
-      form.submit();
+  <head>
+    <meta charset="UTF-8">
+    <title>OTT 신청 페이지</title>
+    <link href="../static/css/index.css" th:href="@{/css/index.css}" rel="stylesheet" />
+    <style>
+      body {
+        margin: 0 auto;
+        max-width: 1000px;
+        background-color: #3617CE;
+        color: white;
+      }
+      h1 {
+        color: white;
+      }
+      a {
+          font-size: 14px;
+          color: white;
+          background-color: #FF404E;
+          padding: 5px 8px;
+          border-radius: 5px;
+          text-decoration: none;
+          margin-right: 10px;
+          margin-bottom: 5px;
+      }
+      a:hover {
+          background-color: #3617A2;
+      }
+      th, td {
+        background-color: white;
+        color: #3617CE;
+      }
+      .container {
+        background-color: white;
+        padding: 20px;
+        border-radius: 5px;
+      }
+      .del-link, .add-link {
+        font-size: 14px;
+        color: white;
+        background-color: #3617CE;
+        padding: 5px 10px;
+        border-radius: 5px;
+        text-decoration: none;
+        margin-right: 10px;
+        align-items: center;
+      }
+      .del-link:hover, .add-link:hover {
+        background-color: #FF404E;
+        color: white;
+      }
+    </style>
+  </head>
+  <body>
+  <h1>OTT 신청 페이지</h1>
+  <a href="/ott/new">OTT 개설은 이쪽으로</a><br>
+  <br>
+  <a href="/">홈 화면</a><br>
+  <hr>
+  <div class="container">
+    <table width="100%" border="1">
+      <thead>
+      <tr>
+        <th>OTT명</th>
+        <th>소유주</th>
+        <th>최대인원</th>
+        <th>현재인원</th>
+        <th>희망공유기간 (개월)</th>
+        <th>총금액</th>
+        <th>삭제</th>
+        <th>신청</th>
+      </tr>
+      </thead>
+      <tbody>
+      <!--+${ottinfo.ottIdKey}-->
+      <tr th:each="ottinfo : ${ottinfos}">
+        <td th:text="${ottinfo.ottVar}"></td>
+        <td th:text="${ottinfo.owner}"></td>
+        <td th:text="${ottinfo.maxNum}"></td>
+        <td th:text="${ottinfo.nowNum}"></td>
+        <td th:text="${ottinfo.duration} + 개월"></td>
+        <td th:text="${ottinfo.totalCost}"></td>
+        <td style="text-align: center;"><a href="/" th:data-ott-id-key="${ottinfo.ottIdKey}" class="del-link">삭제</a></td>
+        <td style="text-align: center;"><a href="/" th:data-add-id-key="${ottinfo.ottIdKey}" class="add-link">신청</a></td>
+        <!--<td><a href="/" th:href="@{'/ott/ottinfo/'+${#strings.toString(ottinfo.ottIdKey)}}">삭제</a></td>-->
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $('.del-link').click(function(event) {
+        event.preventDefault();
+        console.log(event);
+        var ottIdKey = $(this).data('ott-id-key');
+        var form = $('<form action="/ott/ottinfo/' + ottIdKey + '" method="get"></form>');
+        $('body').append(form);
+        form.submit();
+      });
     });
-  });
-  $(document).ready(function() {
-    $('.add-link').click(function(event) {
-      event.preventDefault();
-      console.log(event);
-      var ottIdKey = $(this).data('add-id-key');
-      var form = $('<form action="/ott/ottinfo/add/' + ottIdKey + '" method="get"></form>');
-      $('body').append(form);
-      form.submit();
+    $(document).ready(function() {
+      $('.add-link').click(function(event) {
+        event.preventDefault();
+        console.log(event);
+        var ottIdKey = $(this).data('add-id-key');
+        var form = $('<form action="/ott/ottinfo/add/' + ottIdKey + '" method="get"></form>');
+        $('body').append(form);
+        form.submit();
+      });
     });
-  });
-</script>
-</body>
+  </script>
+  </body>
 </html>
